vlib/v/checker/tests/invalid_variable_err.vv
fn main() {
	a, b := c
	if a {
	}
}
